--- a/GNURZ/demo/project1.lpi
+++ b/GNURZ/demo/project1.lpi
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
-    <Version Value="6"/>
+    <Version Value="7"/>
     <General>
+      <Flags>
+        <LRSInOutputDirectory Value="False"/>
+      </Flags>
       <MainUnit Value="0"/>
-      <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -36,42 +37,160 @@
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
-        <CursorPos X="1" Y="18"/>
-        <TopLine Value="1"/>
+        <CursorPos X="41" Y="34"/>
+        <TopLine Value="4"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
-        <ResourceFilename Value="unit1.lrs"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="1" Y="3"/>
-        <TopLine Value="1"/>
+        <CursorPos X="17" Y="4"/>
+        <TopLine Value="374"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="gnurz.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="gnurz"/>
-        <CursorPos X="1" Y="48"/>
-        <TopLine Value="33"/>
+        <CursorPos X="35" Y="6"/>
+        <TopLine Value="1"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="23"/>
+        <UsageCount Value="29"/>
         <Loaded Value="True"/>
       </Unit2>
     </Units>
-    <JumpHistory Count="0" HistoryIndex="-1"/>
+    <JumpHistory Count="30" HistoryIndex="29">
+      <Position1>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="1492" Column="1" TopLine="1476"/>
+      </Position1>
+      <Position2>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="1494" Column="43" TopLine="1486"/>
+      </Position2>
+      <Position3>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="24" Column="14" TopLine="1"/>
+      </Position3>
+      <Position4>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="29" Column="14" TopLine="8"/>
+      </Position4>
+      <Position5>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="1495" Column="65" TopLine="1479"/>
+      </Position5>
+      <Position6>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="29" Column="31" TopLine="3"/>
+      </Position6>
+      <Position7>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="1556" Column="1" TopLine="1540"/>
+      </Position7>
+      <Position8>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="692" Column="1" TopLine="676"/>
+      </Position8>
+      <Position9>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="693" Column="1" TopLine="677"/>
+      </Position9>
+      <Position10>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="694" Column="1" TopLine="678"/>
+      </Position10>
+      <Position11>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="696" Column="1" TopLine="680"/>
+      </Position11>
+      <Position12>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="697" Column="1" TopLine="681"/>
+      </Position12>
+      <Position13>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="698" Column="1" TopLine="682"/>
+      </Position13>
+      <Position14>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="699" Column="1" TopLine="683"/>
+      </Position14>
+      <Position15>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="700" Column="1" TopLine="684"/>
+      </Position15>
+      <Position16>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="841" Column="1" TopLine="825"/>
+      </Position16>
+      <Position17>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="850" Column="1" TopLine="834"/>
+      </Position17>
+      <Position18>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="692" Column="1" TopLine="676"/>
+      </Position18>
+      <Position19>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="851" Column="1" TopLine="835"/>
+      </Position19>
+      <Position20>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="692" Column="1" TopLine="676"/>
+      </Position20>
+      <Position21>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="851" Column="1" TopLine="835"/>
+      </Position21>
+      <Position22>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="845" Column="96" TopLine="829"/>
+      </Position22>
+      <Position23>
+        <Filename Value="gnurz.pas"/>
+        <Caret Line="1562" Column="1" TopLine="1546"/>
+      </Position23>
+      <Position24>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="155" Column="1" TopLine="152"/>
+      </Position24>
+      <Position25>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="99" Column="73" TopLine="99"/>
+      </Position25>
+      <Position26>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="387" Column="9" TopLine="368"/>
+      </Position26>
+      <Position27>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="122" Column="18" TopLine="122"/>
+      </Position27>
+      <Position28>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="77" Column="46" TopLine="77"/>
+      </Position28>
+      <Position29>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="200" Column="1" TopLine="1"/>
+      </Position29>
+      <Position30>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="39" Column="23" TopLine="8"/>
+      </Position30>
+    </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="5"/>
-    <CodeGeneration>
-      <Generate Value="Faster"/>
-    </CodeGeneration>
+    <Version Value="8"/>
     <Linking>
       <Options>
         <Win32>
